[PRM-211] - Add auth and basic page setup

--- a/app/views/LanguageSelect.scala.html
+++ b/app/views/LanguageSelect.scala.html
@@ -17,7 +17,7 @@
 @import controllers.routes.LanguageSwitchController._
 @import config.AppConfig
 @import uk.gov.hmrc.hmrcfrontend.views.html.components.HmrcLanguageSelect
-@import uk.gov.hmrc.hmrcfrontend.views.viewmodels.language.LanguageSelect
+@import uk.gov.hmrc.hmrcfrontend.views.html.components._
 
 @this(hmrcLanguageSelect: HmrcLanguageSelect)
 
