--- a/app/views/errors/Unauthorised.scala.html
+++ b/app/views/errors/Unauthorised.scala.html
@@ -14,13 +14,15 @@
  * limitations under the License.
  *@
 
-@import config.AppConfig
-
 @this(layout: Layout)
 
-@()(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@()(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
 
-@layout(pageTitle = messages("service.name")) {
-    <h1 class="govuk-heading-xl">@messages("service.name")</h1>
-    <p class="govuk-body">@{messages("service.text")}</p>
+@layout(
+    pageTitle = messages("unauthorised.title")
+) {
+    <h1 class="govuk-heading-xl">@messages("unauthorised.title")</h1>
+    <p class="govuk-body"> @messages("unauthorised.signUp")</p>
+    <p class="govuk-body">@messages("unauthorised.alreadySignedUp")</p>
+    <p class="govuk-body"><a class="govuk-link" href="@routes.SignOutController.signOut()">@messages("base.signOut")</a></p>
 }
