--- a/app/views/components/Header.scala.html
+++ b/app/views/components/Header.scala.html
@@ -23,8 +23,8 @@
 
 @hmrcHeader(Header(
     //TODO: change these when there is concrete implementation
-    homepageUrl = controllers.routes.HelloWorldController.helloWorld().url,
-    serviceUrl = controllers.routes.HelloWorldController.helloWorld().url,
+    homepageUrl = controllers.routes.AppealStartController.onPageLoad().url,
+    serviceUrl = controllers.routes.AppealStartController.onPageLoad().url,
     serviceName = Some(messages("service.name")),
     containerClasses = "govuk-width-container",
     navigation = None,
