--- a/app/views/layouts/Layout.scala.html
+++ b/app/views/layouts/Layout.scala.html
@@ -29,16 +29,18 @@
         hmrcStandardFooter: HmrcStandardFooter,
         languageSelect: views.html.LanguageSelect
 )
-@(pageTitle: String,
-        scriptsBlock: Option[Html] = None,
-        isPageFullWidth: Boolean = true
+@(
+    pageTitle: String,
+    scriptsBlock: Option[Html] = None,
+    isPageFullWidth: Boolean = true,
+    showPenaltyInformation: Boolean = true
 )(contentBlock: Html)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @beforeContentBlock = {
-@phaseBanner("beta")
-@if(appConfig.welshLanguageSupportEnabled) {@languageSelect()}
+    @phaseBanner("beta")
+    @if(appConfig.welshLanguageSupportEnabled) {@languageSelect()}
 
-@govukBackLink(BackLink(href = "#", content = Text(messages("app.common.back")), attributes = Map("id" -> "back-link")))
+    @govukBackLink(BackLink(href = "#", content = Text(messages("app.common.back")), attributes = Map("id" -> "back-link")))
 }
 
 @headBlock = {
@@ -69,5 +71,6 @@
     scriptsBlock = Some(scripts),
     beforeContentBlock = Some(beforeContentBlock),
     footerBlock = Some(hmrcStandardFooter()),
-    isFullWidth = isPageFullWidth
+    isFullWidth = isPageFullWidth,
+    showPenaltyInformation = showPenaltyInformation
 )(contentBlock)
