--- a/app/views/ReasonableExcuseSelectionPage.scala.html
+++ b/app/views/ReasonableExcuseSelectionPage.scala.html
@@ -21,17 +21,16 @@
         formHelper: FormWithCSRF,
         govukButton: GovukButton,
         radios: components.radios,
-        link: components.link,
-        errorSummary: components.errorSummary
+        link: components.link
 )
 
 @(form: Form[_], radioOptions: Seq[RadioItem])(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @layout(pageTitle = messages("reasonableExcuses.title"),
-    isPageFullWidth = false) {
+    isPageFullWidth = false,
+    formHasErrors = form.errors.nonEmpty,
+    formErrors = form.errors) {
     @formHelper(action = controllers.routes.ReasonableExcuseController.onSubmit()) {
-
-        @errorSummary(form.errors)
 
         @radios(
             form = form,
