[PRM-224] - added reasonableExcuses form error (#13)
* [PRM-223] - Reasonable excuse page with dynamic radio rendering

* [PRM-223] - Some cleanup and extra tests

* added error handling for reasonableExcuses form

* added messages to welsh file

* [PRM-224-B] Proposed PR changes

* pr comment changes

* missing welsh message

* added error handling for reasonableExcuses form

* added messages to welsh file

* [PRM-224-B] Proposed PR changes

* pr comment changes

* missing welsh message

Merged.
Reviewed by: Lewis + Andrew.

--- a/app/views/ReasonableExcuseSelectionPage.scala.html
+++ b/app/views/ReasonableExcuseSelectionPage.scala.html
@@ -21,15 +21,16 @@
         formHelper: FormWithCSRF,
         govukButton: GovukButton,
         radios: components.radios,
-        link: components.link)
+        link: components.link
+)
 
 @(form: Form[_], radioOptions: Seq[RadioItem])(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @layout(pageTitle = messages("reasonableExcuses.title"),
-    isPageFullWidth = false) {
+    isPageFullWidth = false,
+    formHasErrors = form.errors.nonEmpty,
+    formErrors = form.errors) {
     @formHelper(action = controllers.routes.ReasonableExcuseController.onSubmit()) {
-
-        @* TODO: Error summary here *@
 
         @radios(
             form = form,
