--- a/app/views/layouts/Layout.scala.html
+++ b/app/views/layouts/Layout.scala.html
@@ -35,7 +35,8 @@
     isPageFullWidth: Boolean = true,
     showPenaltyInformation: Boolean = true,
     formHasErrors: Boolean = false,
-    formErrors: Seq[FormError] = Seq.empty
+    formErrors: Seq[FormError] = Seq.empty,
+    customErrKeyMsg: Option[String] = None
 )(contentBlock: Html)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @beforeContentBlock = {
@@ -76,5 +77,6 @@
     isFullWidth = isPageFullWidth,
     showPenaltyInformation = showPenaltyInformation,
     formHasErrors = formHasErrors,
-    errors = formErrors
+    errors = formErrors,
+    customErrKeyMsg = customErrKeyMsg
 )(contentBlock)
