--- a/app/views/components/errorSummary.scala.html
+++ b/app/views/components/errorSummary.scala.html
@@ -16,12 +16,12 @@
 
 @this(govukErrorSummary: GovukErrorSummary)
 
-@(errors: Seq[FormError], errorFieldSuffix: Option[String] = None, errorId: Option[String] = None)(implicit messages: Messages)
+@(errors: Seq[FormError], errorIdLink: Option[String] = None, errorId: Option[String] = None)(implicit messages: Messages)
 
  @if(errors.nonEmpty) {
   @defining(errors.map { error =>
    val id = if(error.key == "") { errorId.getOrElse("") } else {
-   error.key + errorFieldSuffix.fold("")(suffix => s".$suffix")
+    errorIdLink.fold(error.key)(identity)
   }
   ErrorLink(
    href = Some(s"#$id"),
