--- a/app/views/layouts/Layout.scala.html
+++ b/app/views/layouts/Layout.scala.html
@@ -35,8 +35,7 @@
     isPageFullWidth: Boolean = true,
     showPenaltyInformation: Boolean = true,
     formHasErrors: Boolean = false,
-    formErrors: Seq[FormError] = Seq.empty,
-    customErrKeyMsg: Option[String] = None
+    formErrors: Seq[FormError] = Seq.empty
 )(contentBlock: Html)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @beforeContentBlock = {
@@ -77,6 +76,5 @@
     isFullWidth = isPageFullWidth,
     showPenaltyInformation = showPenaltyInformation,
     formHasErrors = formHasErrors,
-    errors = formErrors,
-    customErrKeyMsg = customErrKeyMsg
+    errors = formErrors
 )(contentBlock)
