--- a/app/views/reasonableExcuseJourneys/crime/HasCrimeBeenReportedToPolicePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/crime/HasCrimeBeenReportedToPolicePage.scala.html
@@ -22,13 +22,13 @@
         govukButton: GovukButton,
         radios: components.radios)
 
-@(form: Form[_], radioOptions: Seq[RadioItem])(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @layout(pageTitle = messages("crimeReason.hasBeenReported.title"),
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors) {
-    @formHelper(action = controllers.routes.CrimeReasonController.onSubmitForHasCrimeBeenReported()) {
+    @formHelper(action = postAction) {
         @radios(
             form = form,
             legend = messages("crimeReason.hasBeenReported.heading"),
