[PRM-297] - Loss of staff page + navigation + tests

--- a/app/views/components/inputDate.scala.html
+++ b/app/views/components/inputDate.scala.html
@@ -49,6 +49,6 @@
             value = form(s"$id.year").value
         )
     ),
-    hint = hintText.map(hint => Hint(content = Text(messages(hint)))),
+    hint = hintText.map(hint => Hint(content = HtmlContent(messages(hint)))),
     errorMessage = form(idOfError).error.fold(form.errors.find(_.key.isEmpty))(err => Some(err)).map(err => ErrorMessage(content = Text(messages(err.message, err.args:_*))))
 ))
