--- a/app/views/MakingALateAppealPage.scala.html
+++ b/app/views/MakingALateAppealPage.scala.html
@@ -33,11 +33,15 @@
 
     @formHelper(action = controllers.routes.MakingALateAppealController.onSubmit()) {
 
-        <h2 class="govuk-label-wrapper govuk-heading-m">@messages("makingALateAppeal.h2")</h2>
+        <h2 class="govuk-label-wrapper govuk-heading-m">
+            <label class="govuk-label govuk-label--m" for="late-appeal-text">
+                @messages("makingALateAppeal.h2")
+            </label>
+        </h2>
 
-        <p class="govuk-hint">@messages("makingALateAppeal.p1")</p>
+        <p class="govuk-hint" id="late-appeal-text-hint">@messages("makingALateAppeal.p1")</p>
 
-        @textArea(form, "late-appeal-text", "")
+        @textArea(form, "late-appeal-text", "", describedBy = Some("late-appeal-text-hint"))
 
         @govukButton(Button(content = Text(messages("common.continue"))))
     }
