--- a/app/views/MakingALateAppealPage.scala.html
+++ b/app/views/MakingALateAppealPage.scala.html
@@ -29,20 +29,12 @@
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors) {
 
-    <h1 class="govuk-heading-l">@messages("makingALateAppeal.heading")</h1>
-
     @formHelper(action = controllers.routes.MakingALateAppealController.onSubmit()) {
 
-        <h2 class="govuk-label-wrapper govuk-heading-m">
-            <label class="govuk-label govuk-label--m" for="late-appeal-text">
-                @messages("makingALateAppeal.h2")
-            </label>
-        </h2>
-
-        <p class="govuk-hint" id="late-appeal-text-hint">@messages("makingALateAppeal.p1")</p>
-
-        @textArea(form, "late-appeal-text", "", describedBy = Some("late-appeal-text-hint"))
-
+        @textArea(form, "late-appeal-text", messages("makingALateAppeal.heading"),
+            isPageHeading = true,
+            describedBy = Some("late-appeal-text-hint"),
+            hint = Some(Html(messages("makingALateAppeal.p1"))))
         @govukButton(Button(content = Text(messages("common.continue"))))
     }
 }
