--- a/app/views/components/radios.scala.html
+++ b/app/views/components/radios.scala.html
@@ -32,7 +32,7 @@
         legend = Some(Legend(
             content = Text(messages(legend)),
             isPageHeading = legendAsHeading,
-            classes = if(legendAsHeading) "govuk-label--xl" else "govuk-visually-hidden"
+            classes = if(legendAsHeading) "govuk-label--l" else "govuk-visually-hidden"
         ))
     )),
     hint = hint.map { hint => Hint(
