--- a/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
@@ -8,7 +8,7 @@
 
 @(form: Form[_], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@layout(pageTitle = messages("healthReason.title"),
+@layout(pageTitle = messages("healthReason.whenHealthIssueHappened.title"),
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors) {
@@ -16,9 +16,9 @@
 
         @dateInput(
             form = form,
-            legendContent = messages("healthReason.heading"),
+            legendContent = messages("healthReason.whenHealthIssueHappened.heading"),
             legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
-            hintText = Some(messages("healthReason.hintText")),
+            hintText = Some(messages("healthReason.whenHealthIssueHappened.hintText")),
             legendAsPageHeading = true
         )
 
