--- a/app/views/HonestyDeclarationPage.scala.html
+++ b/app/views/HonestyDeclarationPage.scala.html
@@ -33,7 +33,7 @@
     <ul class="govuk-list govuk-list--bullet">
         <li>
         @if(!reasonText.equals("")){
-            @messages("honestyDeclaration.li.1.1", reasonText)
+            @messages("honestyDeclaration.li.1.1", reasonText)&nbsp
         }
         @messages("honestyDeclaration.li.1.2", friendlyDate)
         </li>
