PRM-406 Add 'Who planned to submit page'

--- a/app/views/agents/WhoPlannedToSubmitVATReturnPage.scala.html
+++ b/app/views/agents/WhoPlannedToSubmitVATReturnPage.scala.html
@@ -32,8 +32,7 @@
             form = form,
             legend = messages("agents.whoPlannedToSubmitVATReturn.heading"),
             items = radioOptions,
-            legendAsHeading = true,
-            formFieldId = "whoPlannedToSubmitVATReturn"
+            legendAsHeading = true
         )
 
         @govukButton(Button(content = Text(messages("common.continue"))))
