--- a/app/views/AppealStartPage.scala.html
+++ b/app/views/AppealStartPage.scala.html
@@ -19,9 +19,7 @@
 
 @this(layout: Layout,
         bullets: components.bullets,
-        link: components.link,
-        govukButton: GovukButton,
-        formHelper: FormWithCSRF)
+        link: components.link)
 
 @(isLate: Boolean)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
@@ -58,11 +56,10 @@
     <p class="govuk-body">@messages("appealStart.p5")</p>
     <p class="govuk-body">@messages("appealStart.p6")</p>
 
-    @if(request.session.get(SessionKeys.agentSessionVrn).isDefined){
-        @formHelper(action = controllers.routes.AgentsController.onSubmit()) {
-        @govukButton(Button(content = Text(messages("common.continue"))))
-            }
-        } else {
-            @link(routes.ReasonableExcuseController.onPageLoad().url, "common.continue", button = true, classes = "govuk-button")
-            }
+    @link(if(request.session.get(SessionKeys.agentSessionVrn).isDefined){
+        routes.AgentsController.onPageLoad().url
+            }else{
+        routes.ReasonableExcuseController.onPageLoad().url
+    }
+     ,"common.continue", button = true, classes = "govuk-button")
 }
