PRM-405 Routing for agent appeals
* PRM-405 Added routing and navigation to cover Scenarios 5 to 8.

* PRM-405 fixed page redirect

* PRM-405 added and fixed test cases and refractored files to include 'Agent' in their names

* PRM-405 edited the test case name

--- a/app/views/AppealStartPage.scala.html
+++ b/app/views/AppealStartPage.scala.html
@@ -15,6 +15,7 @@
  *@
 
 @import config.AppConfig
+@import utils.SessionKeys
 
 @this(layout: Layout,
         bullets: components.bullets,
@@ -55,5 +56,10 @@
     <p class="govuk-body">@messages("appealStart.p5")</p>
     <p class="govuk-body">@messages("appealStart.p6")</p>
 
-    @link(routes.ReasonableExcuseController.onPageLoad().url, "common.continue", button = true, classes = "govuk-button")
+    @link(if(request.session.get(SessionKeys.agentSessionVrn).isDefined){
+        routes.AgentsController.onPageLoad().url
+            }else{
+        routes.ReasonableExcuseController.onPageLoad().url
+    }
+     ,"common.continue", button = true, classes = "govuk-button")
 }
