[PRM-BugFixForAgentRouting] - Fixed routing so that if agent selects themself as the reason, it does not route back to CYA

--- a/app/views/AppealStartPage.scala.html
+++ b/app/views/AppealStartPage.scala.html
@@ -57,7 +57,7 @@
     <p class="govuk-body">@messages("appealStart.p6")</p>
 
     @link(if(request.session.get(SessionKeys.agentSessionVrn).isDefined){
-        routes.AgentsController.onPageLoad().url
+        routes.AgentsController.onPageLoadForWhoPlannedToSubmitVATReturn(NormalMode).url
             }else{
         routes.ReasonableExcuseController.onPageLoad().url
     }
