--- a/app/views/reasonableExcuseJourneys/other/WhenDidBecomeUnablePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/WhenDidBecomeUnablePage.scala.html
@@ -1,5 +1,6 @@
 
 @import config.AppConfig
+@import utils.SessionKeys
 
 @this(layout: Layout,
         formHelper: FormWithCSRF,
@@ -7,6 +8,10 @@
         dateInput: components.inputDate)
 
 @(form: Form[_], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+
+@hintText = @{
+    if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) "otherReason.whenDidBecomeUnable.lpp.hintText" else "otherReason.whenDidBecomeUnable.hintText"
+}
 
 @layout(pageTitle = messages("otherReason.whenDidBecomeUnable.title"),
     isPageFullWidth = false,
@@ -18,7 +23,7 @@
             form = form,
             legendContent = messages("otherReason.whenDidBecomeUnable.heading"),
             legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
-            hintText = Some(messages("otherReason.whenDidBecomeUnable.hintText")),
+            hintText = Some(messages(hintText)),
             legendAsPageHeading = true
         )
 
