--- a/app/views/AppealStartPage.scala.html
+++ b/app/views/AppealStartPage.scala.html
@@ -17,6 +17,7 @@
 @import config.AppConfig
 @import utils.SessionKeys
 
+
 @this(layout: Layout,
         bullets: components.bullets,
         link: components.link)
@@ -25,7 +26,7 @@
 
 @baseBulletPoints = @{
     Seq(
-        Html(messages("appealStart.li.2.1")),
+        if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) Html(messages("appealStart.lpp.li.2.1")) else Html(messages("appealStart.li.2.1")),
         Html(messages("appealStart.li.2.2"))
     )
 }
