--- a/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
@@ -1,5 +1,6 @@
 
 @import config.AppConfig
+@import utils.SessionKeys
 
 @this(layout: Layout,
         formHelper: FormWithCSRF,
@@ -7,6 +8,10 @@
         dateInput: components.inputDate)
 
 @(form: Form[_], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+
+@lppOrLspDynamicText = @{
+    if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) "healthReason.whenHealthIssueHappened.lpp.hintText" else "healthReason.whenHealthIssueHappened.hintText"
+}
 
 @layout(pageTitle = messages("healthReason.whenHealthIssueHappened.title"),
     isPageFullWidth = false,
@@ -18,7 +23,7 @@
             form = form,
             legendContent = messages("healthReason.whenHealthIssueHappened.heading"),
             legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
-            hintText = Some(messages("healthReason.whenHealthIssueHappened.hintText")),
+            hintText = Some(messages(lppOrLspDynamicText)),
             legendAsPageHeading = true
         )
 
