--- a/app/views/reasonableExcuseJourneys/other/WhyReturnSubmittedLatePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/WhyReturnSubmittedLatePage.scala.html
@@ -15,6 +15,7 @@
 *@
 
 @import config.AppConfig
+@import utils.SessionKeys
 
 @this(layout: Layout,
         link: components.link,
@@ -24,14 +25,18 @@
 
 @(form: Form[_], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@layout(pageTitle = messages("otherReason.whyReturnSubmittedLate.title"),
+@pageTitleAndHeading = @{
+    if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) "otherReason.whyReturnSubmittedLate.lpp.title" else "otherReason.whyReturnSubmittedLate.title"
+}
+
+@layout(pageTitle = messages(pageTitleAndHeading),
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors) {
 
     @formHelper(action = postAction) {
 
-        @textArea(form, "why-return-submitted-late-text", messages("otherReason.whyReturnSubmittedLate.heading"),
+        @textArea(form, "why-return-submitted-late-text", messages(pageTitleAndHeading),
             isPageHeading = true,
             labelClasses = Some("govuk-label--l"))
         @govukButton(Button(content = Text(messages("common.continue"))))
